--- a/todos/templates/todos/todo_form.html
+++ b/todos/templates/todos/todo_form.html
@@ -1,19 +1,25 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
 
 {% load crispy_forms_tags %}
 
 {% block page_title %}
-Nova Tarefa
-{% endblock page_title %}
+  {% if todo.pk %}
+    Editar Tarefa
+  {% else %}
+    Nova Tarefa
+  {% endif %}
+{% endblock %}
 
 {% block content %}
+  {% if todo.pk %}
+    <h1>Editar Tarefa</h1>
+  {% else %}
+    <h1>Nova Tarefa</h1>
+  {% endif %}
 
-<h1>Nova Tarefa</h1>
-        <form method="POST">
-           {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
-        </form>
-
-{% endblock content %}
-        
+  <form method="POST">
+    {% csrf_token %}
+    {{ form|crispy }}
+    <button type="submit" class="btn btn-primary btn-sm">Salvar</button>
+  </form>
+{% endblock %}
