ajustes no css e html

--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -5,7 +5,8 @@
 {% block content %}
   <h1>Lista de Tarefas</h1>
   {% if todo_list %}
-    <table class="table">
+    <table class="table table-sm table-striped table-bordered">
+      <caption>Lista de tarefas</caption>
       <thead>
         <tr>
           <th scope="col">#</th>
